# Wealth_Management_Autogen

./: .env.example  .gitignore  A ready-to-run AutoGen repo skeleton with these fi.md  Agent1_fixed (1).csv  Agent1_fixed.csv  README.md  agent_specs.yaml  models.json  pyproject.toml  synthetic_training_data.csv  wealth_manager_app.py
output/: alloc.csv  holdings_extracted.csv  transactions_extracted.csv  wealth_report.md
output_streamlit/: transactions_extracted.csv  wealth_report.md
src/app/: main.py  multi_agent_wealth_manager.py
src/app/agents/: graph.py  runner.py
src/app/agents/mocks/: client_input_alex.json  client_input_alex_from_csv.csv  client_input_alex_from_csv.json  kyc_status.json  market_prices.json  tax_brackets.json
src/app/agents/tools/: cashflow.py  comms_builder.py  compliance_rules.py  kyc.py  market_data.py  scenarios.py  tax_rules.py
src/app/api/: dto.py  routes.py  server.py
src/app/config/: llm.py  settings.py
src/app/core/: artifacts_store.py  policies.py  prompts.py  specs_loader.py
src/app/schemas/: models.py
src/app/schemas/jsonschemas/: client_profile.json  comms_package.json  compliance_decision.json  plan_set.json  risk_report.json  tax_action_plan.json
src/app/storage/: memory_store.py  store.py
src/tests/: test_comms_format.py  test_flow.py  test_schemas.py
